﻿=== TBA: Version 0.4.3.2 ===
  - Change: Updated audio API library
  - Change: Increased maximum playback speed to 200%
  - Fix: Audio playback now works on Windows 10

=== 2018-03-17: Version 0.4.3.1 ===
  - Change: Re-targeted for newer .NET framework, 4.6.2
  - Change: Show alpha channel for PS2 textures
  - Change: Inverted lefty-flip (i.e. Lower pitched notes are now shown at botton of tab by default)
  - Fix: Updated MIDI parsing for 'Instrument Name' meta events (Now GH80s archives import)

=== 2007-04-09: Version 0.4.3.0 ===
  - Feature: Read-only support for GH2 Xbox 360 NTSC archive
  - Change: When adding a read-only archive, ghex asks to make it writable
  - Change: Better error handling in a few places
  - Change: Time for events in .mid import now displayed as Minutes:Seconds
  - Change: .mid import for FeedBack songs now support events in all tracks
  - Fix: Didn't ignore unknown settings when importing FeedBack songs
  - Fix: FeedBack songs could get very low BPM in the first measure on some systems
  - Fix: Incorrectly showed greyed out Replace option for .mid/.vgs in read-only archive
  - Fix: It wasn't possible to remove an archive from the list that ghex couldn't load
  
=== 2007-03-18: Version 0.4.2.0 ===
  - Feature: Shrink archive
  - Change: VGS import now supports .ogg as source
  - Change: More information given for issues when importing to .mid
  - Change: .mid import now supports Frets on Fire songs
  - Change: .mid import now warns if an end event is present but set too early
  - Change: Archive validation now lets you recover healthy files from bad archives
  - Change: Change log dialog now shows all minor version changes
  - Change: Copy From DVD now defaults to copying all files, not just the archive
  - Fix: FeedBack songs with an offset could result in bad .mid
  - Fix: Fixed some resource leaks when importing to .vgs
  - Fix: Crash in "Copy From DVD"

=== 2007-03-10: Version 0.4.1.0 ===